--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
     "name": "Teru",
     "email": "kattunforever49@gmail.com",
     "url": "https://www.unity3d.com"
-  }
+  },
+  "type": "module"
 }
